@@ -49,11 +49,12 @@ local spawn_table = function(level)
     -- Tier 1 - 0.0 - 0.4
     -- Tier 2 - 0.4 - 0.8
     -- Tier 3 - 0.8+
-    res[1] = { MOD_NAME .. '/zergling/' .. level, { { 0.0, 0.7 }, { 0.2, 0.7 }, { 0.4, 0.4 }, { 0.6, 0.4 }, { 0.8, 0.3 } } }
-    res[2] = { MOD_NAME .. '/hydralisk/' .. level, { { 0.0, 0.2 }, { 0.2, 0.2 }, { 0.4, 0.4 }, { 0.6, 0.4 }, { 0.8, 0.35 } } }
-    res[3] = { MOD_NAME .. '/mutalisk/' .. level, { { 0.0, 0.1 }, { 0.2, 0.1 }, { 0.4, 0.2 }, { 0.6, 0.2 }, { 0.8, 0.3 } } }
-    -- Tier 3 --
-    res[4] = { MOD_NAME .. '/drone/' .. level, { { 0.0, 0 }, { 0.2, 0 }, { 0.4, 0 }, { 0.6, 0 }, { 0.8, 0.05 } } }
+    res[1] = { MOD_NAME .. '/zergling/' .. level, { { 0.0, 0.7 }, { 0.2, 0.7 }, { 0.4, 0.4 }, { 0.6, 0.4 }, { 0.8, 0.2 } } }
+    res[2] = { MOD_NAME .. '/hydralisk/' .. level, { { 0.0, 0.2 }, { 0.2, 0.2 }, { 0.4, 0.4 }, { 0.6, 0.4 }, { 0.8, 0.2 } } }
+    res[3] = { MOD_NAME .. '/mutalisk/' .. level, { { 0.0, 0.1 }, { 0.2, 0.1 }, { 0.4, 0.2 }, { 0.6, 0.2 }, { 0.8, 0.1 } } }
+
+    res[4] = { MOD_NAME .. '/overlord/' .. level, { { 0.0, 0 }, { 0.2, 0 }, { 0.4, 0 }, { 0.6, 0 }, { 0.8, 0.25 } } }
+    res[5] = { MOD_NAME .. '/drone/' .. level, { { 0.0, 0 }, { 0.2, 0 }, { 0.4, 0 }, { 0.6, 0 }, { 0.8, 0.25 } } }
     return res
 end
 
